@@ -1,4 +1,11 @@
-2002-02-31  Pablo Saratxaga  <pablo@mandrakesoft.com>
+2002-02-01  Pablo Saratxaga  <pablo@mandrakesoft.com>
+
+	* docs/gdmconfig/eu/figures: updated two images
+	* gui/gdmlanguages.c: added some more languages for the menu
+	  and corrected the Hebrew locale name ('iw' lang code has been
+	  superseeded with 'he')
+
+2002-01-31  Pablo Saratxaga  <pablo@mandrakesoft.com>
 
 	* configure.in, docs/Makefile.am, docs/gdmconfig/Makefile.am,
 	  docs/eu/, docs/gdmconfig/eu/ : Added Basque help files 
